Fixup example link feed, add usecase in readme

--- a/README
+++ b/README
@@ -11,3 +11,38 @@ Metacello new
    repository: 'github://DraagrenKirneh/GraphQL';
    load.
 ```
+
+# Example
+
+```smalltalk
+
+| mutation response payload id query |
+	
+ZnServer default delegate: GqlExampleLinkFeed createDelegate.
+
+mutation := { 
+	'query' -> 'mutation { 
+		post(name: "Pharo", url: "www.pharo.org") { id }
+	}'
+ } asDictionary.
+
+response := ZnEasy 
+	post: ZnServer default localUrl
+	data: (ZnStringEntity json: (STONJSON toString: mutation)).
+
+payload := STONJSON fromString: response contents.
+
+id := { 'data' . 'post' . 'id' } inject: payload into: [ :dct :item | dct at: item	].
+	
+query := Dictionary new
+	at: 'query' put: 'query root($id: ID){ link(id: $id) { name 	url }}';
+	at: 'variables' put: { 'id' -> id } asDictionary;
+	yourself.
+	
+response := ZnEasy 
+	post: ZnServer default localUrl
+	data: (ZnStringEntity json: (STONJSON toString: query)).
+	
+payload := STONJSON fromString: response contents.
+payload inspect
+```
